--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,1 +1,3 @@
 v1.3.0, 21/02/2018 -- Initial release.
+
+v1.3.1, 31/03/2018 -- Fixed bug with status response (int), now compatible with (string) TaskSuccess response from ilovepdf.com
